--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
         "@types/node": "^16.11.27",
         "@types/react": "^18.0.5",
         "@types/react-dom": "^18.0.0",
+        "@types/redux-saga-routines": "^3.1.2",
         "@types/styled-components": "^5.1.25",
         "react": "^18.0.0",
         "react-dom": "^18.0.0",
         "react-redux": "^7.2.8",
         "react-scripts": "5.0.1",
+        "redux-saga": "^1.1.3",
+        "redux-saga-routines": "^3.2.3",
         "styled-components": "^5.3.5",
         "typescript": "^4.6.3",
         "web-vitals": "^2.1.4"
