--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
         "@types/react-dom": "^18.0.0",
         "@types/redux-saga-routines": "^3.1.2",
         "@types/styled-components": "^5.1.25",
+        "csstype": "^3.0.11",
         "react": "^18.0.0",
         "react-dom": "^18.0.0",
         "react-redux": "^7.2.8",
+        "react-router-dom": "^6.3.0",
         "react-scripts": "5.0.1",
         "redux-saga": "^1.1.3",
         "redux-saga-routines": "^3.2.3",
