--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "@types/react-dom": "^18.0.0",
         "@types/redux-saga-routines": "^3.1.2",
         "@types/styled-components": "^5.1.25",
+        "classnames": "^2.3.1",
         "csstype": "^3.0.11",
         "react": "^18.0.0",
         "react-dom": "^18.0.0",
