--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "@types/react-dom": "^18.0.0",
         "@types/redux-saga-routines": "^3.1.2",
         "@types/styled-components": "^5.1.25",
+        "axios": "^0.26.1",
         "classnames": "^2.3.1",
         "csstype": "^3.0.11",
         "react": "^18.0.0",
@@ -23,6 +24,7 @@
         "redux-saga": "^1.1.3",
         "redux-saga-routines": "^3.2.3",
         "styled-components": "^5.3.5",
+        "swr": "^1.3.0",
         "typescript": "^4.6.3",
         "web-vitals": "^2.1.4"
     },
