--- a/package.json
+++ b/package.json
@@ -1,55 +1,82 @@
 {
-    "name": "xiaomi",
-    "version": "0.1.0",
-    "private": true,
-    "dependencies": {
-        "@reduxjs/toolkit": "^1.8.1",
-        "@testing-library/jest-dom": "^5.16.4",
-        "@testing-library/react": "^13.0.1",
-        "@testing-library/user-event": "^13.5.0",
-        "@types/jest": "^27.4.1",
-        "@types/node": "^16.11.27",
-        "@types/react": "^18.0.5",
-        "@types/react-dom": "^18.0.0",
-        "@types/redux-saga-routines": "^3.1.2",
-        "@types/styled-components": "^5.1.25",
-        "axios": "^0.26.1",
-        "classnames": "^2.3.1",
-        "csstype": "^3.0.11",
-        "react": "^18.0.0",
-        "react-dom": "^18.0.0",
-        "react-redux": "^7.2.8",
-        "react-router-dom": "^6.3.0",
-        "react-scripts": "5.0.1",
-        "redux-saga": "^1.1.3",
-        "redux-saga-routines": "^3.2.3",
-        "styled-components": "^5.3.5",
-        "swr": "^1.3.0",
-        "typescript": "^4.6.3",
-        "web-vitals": "^2.1.4"
-    },
-    "scripts": {
-        "dev": "react-scripts start",
-        "build": "react-scripts build",
-        "test": "react-scripts test",
-        "eject": "react-scripts eject"
-    },
-    "eslintConfig": {
-        "extends": [
-            "react-app",
-            "react-app/jest"
-        ]
-    },
-    "browserslist": {
-        "production": [
-            ">0.2%",
-            "not dead",
-            "not op_mini all"
+  "name": "xiaomi",
+  "version": "0.1.0",
+  "private": true,
+  "dependencies": {
+    "@reduxjs/toolkit": "^1.8.1",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.0.1",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^27.4.1",
+    "@types/node": "^16.11.27",
+    "@types/react": "^18.0.5",
+    "@types/react-dom": "^18.0.0",
+    "@types/redux-saga-routines": "^3.1.2",
+    "@types/styled-components": "^5.1.25",
+    "axios": "^0.26.1",
+    "classnames": "^2.3.1",
+    "csstype": "^3.0.11",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "react-redux": "^7.2.8",
+    "react-router-dom": "^6.3.0",
+    "react-scripts": "5.0.1",
+    "redux-saga": "^1.1.3",
+    "redux-saga-routines": "^3.2.3",
+    "styled-components": "^5.3.5",
+    "swr": "^1.3.0",
+    "typescript": "^4.6.3",
+    "web-vitals": "^2.1.4"
+  },
+  "scripts": {
+    "dev": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "storybook": "start-storybook -p 6006 -s public",
+    "build-storybook": "build-storybook -s public"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ],
+    "overrides": [
+      {
+        "files": [
+          "**/*.stories.*"
         ],
-        "development": [
-            "last 1 chrome version",
-            "last 1 firefox version",
-            "last 1 safari version"
-        ]
-    }
+        "rules": {
+          "import/no-anonymous-default-export": "off"
+        }
+      }
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "devDependencies": {
+    "@storybook/addon-actions": "^6.4.22",
+    "@storybook/addon-controls": "^6.4.22",
+    "@storybook/addon-essentials": "^6.4.22",
+    "@storybook/addon-interactions": "^6.4.22",
+    "@storybook/addon-links": "^6.4.22",
+    "@storybook/builder-webpack5": "^6.4.22",
+    "@storybook/manager-webpack5": "^6.4.22",
+    "@storybook/node-logger": "^6.4.22",
+    "@storybook/preset-create-react-app": "^4.1.0",
+    "@storybook/react": "^6.4.22",
+    "@storybook/testing-library": "^0.0.9",
+    "storybook-addon-styled-component-theme": "^2.0.0",
+    "webpack": "^5.72.0"
+  }
 }
