--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "classnames": "^2.3.1",
     "csstype": "^3.0.11",
     "react": "^18.0.0",
+    "react-cookie": "^4.1.1",
     "react-dom": "^18.0.0",
+    "react-hook-form": "^7.30.0",
     "react-redux": "^7.2.8",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
