--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-redux": "^7.2.8",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "redux-persist": "^6.0.0",
     "redux-saga": "^1.1.3",
     "redux-saga-routines": "^3.2.3",
     "styled-components": "^5.3.5",
