--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react-dev-utils": "^12.0.1",
     "react-dom": "^18.0.0",
     "react-hook-form": "^7.30.0",
+    "react-qr-code": "^2.0.7",
     "react-redux": "^7.2.8",
     "react-refresh": "^0.11.0",
     "react-router-dom": "^6.3.0",
