--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "postcss-preset-env": "^7.0.1",
     "prompts": "^2.4.2",
     "qs": "^6.10.3",
+    "rc-select": "^14.1.3",
     "react": "^18.0.0",
     "react-app-polyfill": "^3.0.0",
     "react-cookie": "^4.1.1",
@@ -59,6 +60,7 @@
     "react-redux": "^7.2.8",
     "react-refresh": "^0.11.0",
     "react-router-dom": "^6.3.0",
+    "react-select": "^5.3.2",
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.1.3",
     "redux-saga-routines": "^3.2.3",
