--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "qs": "^6.10.3",
     "rc-select": "^14.1.3",
     "react": "^18.0.0",
+    "react-animations": "^1.0.0",
     "react-app-polyfill": "^3.0.0",
     "react-cookie": "^4.1.1",
     "react-dev-utils": "^12.0.1",
@@ -128,6 +129,7 @@
     "@storybook/preset-create-react-app": "^4.1.0",
     "@storybook/react": "^6.4.22",
     "@storybook/testing-library": "^0.0.9",
+    "@types/react-animations": "^1.0.0",
     "storybook-addon-styled-component-theme": "^2.0.0",
     "webpack": "^5.72.0"
   },
